--- a/Assignment2/docker-compose.yaml
+++ b/Assignment2/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: postgsres
       POSTGRES_DB: db
     ports:
       - 5432:5432
@@ -23,6 +23,8 @@ services:
       - 5050:80
     volumes:
       - pgadmin:/var/lib/pgadmin
+    logging:
+      driver: "none"
 
 volumes:
   db-data:
