--- a/Assignment2/docker-compose.yaml
+++ b/Assignment2/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgsres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: db
     ports:
       - 5432:5432
