--- a/Assignment3/docker-compose.yaml
+++ b/Assignment3/docker-compose.yaml
@@ -18,8 +18,11 @@ services:
       - ./neo4j/config:/config
       - ./neo4j/data:/data
       - ./neo4j/plugins:/plugins
+      - ./data:/import # Map the data folder to neo4j's import folder
     environment:
       - NEO4J_AUTH=neo4j/${NEO4J_PASSWORD}
+      - NEO4J_server_directories_import=/import
+      - NEO4J_dbms_security_allow__csv__import__from__file__urls=true
     ports:
       - "7474:7474"
       - "7687:7687"
